fix(Notifications): `default-action-target` is optional

BUG: 501244